<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextweb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_uri" />

    <Button
        android:id="@+id/websites"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:layout_marginBottom="24dp"
        android:onClick="openWebsite"
        android:text="@string/button_uri"
        android:textColor="#101010"
        app:backgroundTint="#A8A8A8" />

    <EditText
        android:id="@+id/editTextlocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_loc" />

    <Button
        android:id="@+id/locations"
        android:layout_width="164dp"
        android:layout_height="58dp"
        android:onClick="openLocation"
        android:text="@string/button_loc"
        android:textColor="#101010"
        app:backgroundTint="#FFA8A8A8" />

    <EditText
        android:id="@+id/editTextsharetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edittext_share"
        />

    <Button
        android:id="@+id/sharetext"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:onClick="shareText"
        android:text="@string/button_share"
        android:textColor="#101010"
        app:backgroundTint="#FFA8A8A8" />

    <Button
        android:id="@+id/takepic"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="24dp"
        android:insetTop="26dp"
        android:onClick="Takethispic"
        android:text="@string/takepics"
        android:textColor="#101010"
        android:textSize="14sp"
        android:visibility="visible"
        app:backgroundTint="#FFA8A8A8" />

</LinearLayout>